--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +7,22 @@
         <link rel="stylesheet" href="./assets/css/index.css" />
     </head>
     <body>
-        <h1>hello world</h1>
+        <div class="container">
+            <h1>Jogo da Velha</h1>
+            <div class="board">
+                <div id="0" class="square"></div>
+                <div id="1" class="square"></div>
+                <div id="2" class="square"></div>
+                <div id="3" class="square"></div>
+                <div id="4" class="square"></div>
+                <div id="5" class="square"></div>
+                <div id="6" class="square"></div>
+                <div id="7" class="square"></div>
+                <div id="8" class="square"></div>
+            </div>
+            <button onclick="resetGame()">Reset</button>
+        </div>
+        <script src="./assets/js/game.js"></script>
+        <script src="./assets/js/interface.js"></script>
     </body>
 </html>
